<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="nudgespot_javascript_api_key">43cbec12b85957e2244f91af04cf238a</string>
    <string name="nudgespot_rest_api_key">90ea5fdd4d74c3e13b1059fdbebf15a1</string>
    <string name="rupee">ETB </string>
    <string name="rupee_zero">ETB 0.0</string>
    <string name="rupee_100">ETB 100</string>
    <string name="rupee_200">ETB 200</string>
    <string name="rupee_500">ETB 500</string>
    <string name="rupee_zero_zero">ETB 0000.00</string>
    <string name="digits_characters_numbers">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789.\\ </string>
    <string name="email_id">Email ID</string>
    <string name="confirm_email_id">Confirm Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="ok">OK</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="check_your_registered_email_phone_number_for_otp">Check your registered email/phone number for OTP</string>
    <string name="enter_code">Enter Code</string>
    <string name="done">Done</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="select_language">Select Language</string>
    <string name="enter_phone_number">Enter Phone No.</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="rides">Rides</string>
    <string name="ride">Ride</string>
    <string name="no_rides_currently">No rides currently</string>
    <string name="missed">Missed</string>
    <string name="no_missed_rides_currently">No missed rides currently.</string>
    <string name="update">Update</string>
    <string name="driver_mode">Driver Mode</string>
    <string name="jugnoo_on">%s ON</string>
    <string name="driver_type">Driver Type</string>
    <string name="ride_type">Ride Type</string>
    <string name="support">Support</string>
    <string name="language_preferences">Language Preferences</string>
    <string name="start_ride">Start Ride</string>
    <string name="end_ride">End Ride</string>
    <string name="reached_destination">Reached Destination</string>
    <string name="distance">Distance</string>
    <string name="wait_time">Congestion Time</string>
    <string name="fare">Fare</string>
    <string name="accept_ride">Accept Ride</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="call">Call</string>
    <string name="ride_time">Ride Time</string>
    <string name="submit">SUBMIT</string>
    <string name="search">Search</string>
    <string name="your_login_session_expired">Your Login session has expired. Please login again.</string>
    <string name="alert">Alert</string>
    <string name="server_error">Server error. Please try again later.</string>
    <string name="server_not_responding">Oops!! Server not responding. Please try again later.</string>
    <string name="check_internet_message">Check your internet connection.</string>
    <string name="driver_id">Driver ID:</string>
    <string name="rank_city">City Rank:</string>
    <string name="rank_overall">Overall Rank:</string>
    <string name="monthly">Monthly Score</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="total_rides">Total Rides</string>
    <string name="rides_pending">Rides Pending</string>
    <string name="rides_valid_upto">Valid Upto</string>
    <string name="earnings">Earnings</string>
    <string name="rides_taken">Rides Taken</string>
    <string name="rides_missed">Rides Missed</string>
    <string name="rides_cancelled">Rides Cancelled</string>
    <string name="online_hours">Online Hours</string>
    <string name="Auto_not_working">Auto is not working</string>
    <string name="Traffic">Traffic</string>
    <string name="accepted_by_mistake">Ride accepted by mistake</string>
    <string name="Customer_asked_to_cancel">Customer asked to cancel the ride</string>
    <string name="Not_able_to_contact_customer">Not able to contact customer</string>
    <string name="Customer_behavior">Customer\'s bad behavior</string>
    <string name="profile">PROFILE</string>
    <string name="call_us">Call Us</string>
    <string name="auto_number">Auto number</string>
    <string name="Document_type">Document type</string>
    <string name="Requirement">Requirement</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="Submit">Submit</string>
    <string name="arrived">Arrived</string>
    <string name="accept_subsidy">Accept Subsidy</string>
    <string name="account">Account</string>
    <string name="accept">Accept</string>
    <string name="away_from_you">Away from you:</string>
    <string name="end_ride_text">Are you sure you want to end ride?</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="customer_pickup_text">A pickup has been assigned to you. Please pick the customer.</string>
    <string name="start_ride_text">Please confirm you have picked up customer : %s</string>
    <string name="battery_level_text">Battery level must be greater than 20% to accept the ride. Please plugin to a power source to continue.</string>
    <string name="battery_level_start_text">Battery level must be greater than 10% to start the ride. Please plugin to a power source to continue.</string>
    <string name="battery_level_arrived_text">Battery level must be greater than 10% to to mark the ride arrived. Please plugin to a power source to continue.</string>
    <string name="back">Back</string>
    <string name="change_phone_no_text">Changed Phone number is same as the previous one.</string>
    <string name="code_empty">Code can\'t be empty</string>
    <string name="confirm_email_text">Confirm email id doesn\'t match</string>
    <string name="choose_email_client">Choose an Email client:</string>
    <string name="select_time_error_text">Cannot select time before current time</string>
    <string name="call_me">CALL ME</string>
    <string name="change_phone_no">CHANGE PHONE NUMBER</string>
    <string name="creating_game">Creating Game ...</string>
    <string name="completed">Completed</string>
    <string name="customer_name">Customer name: </string>
    <string name="change">CHANGE</string>
    <string name="km">Km</string>
    <string name="disable_mock_location">Disable mock location first</string>
    <string name="daily">Daily</string>
    <string name="enter_new_phone_no">Enter New Phone Number</string>
    <string name="enter_fare">ENTER FARE</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="email">Email:</string>
    <string name="forgot_password_cap">FORGOT PASSWORD</string>
    <string name="fare_details">Fare Details</string>
    <string name="go_to_setting">Go to Settings</string>
    <string name="google_pay_service_error">Google Play Services Error</string>
    <string name="google_pay_service_error_message">Google Play services not found or outdated. Please install Google Play Services?</string>
    <string name="go_to_playstore">Go to Play Store:</string>
    <string name="have_arrived">Have you arrived?</string>
    <string name="invite_earn">Invite &amp; Earn</string>
    <string name="create_new_account_msg">If you would still like to create a new account</string>
    <string name="not_recived_otp">I didn\'t receive the OTP</string>
    <string name="jugnoo_off">%s OFF</string>
    <string name="jugnoo_cut">%s Cut</string>
    <string name="loading">Loading ...</string>
    <string name="purchasing">Purchasing ...</string>
    <string name="fetching">Fetching data...</string>
    <string name="location_setting">Location Settings</string>
    <string name="location_setting_enable_message">Location is not enabled. Do you want to enable it from settings menu?</string>
    <string name="luggage_charge">Luggage Charge</string>
    <string name="login">Login</string>
    <string name="restart_phone">Your device location is not updating, Please Restart Your Phone</string>
    <string name="min_fare">Min Fare</string>
    <string name="meals_on">Meals ON</string>
    <string name="mail_us">MAIL US</string>
    <string name="message">MESSAGE</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="no_luggage">No luggage added</string>
    <string name="luggage_added">luggage items added</string>
    <string name="no_lugage">NO LUGGAGE</string>
    <string name="network_problem">Network Problem. Please Switch OFF and Switch ON your phone and wait for 5 minutes to continue using %s.</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="no_of_rides">No. of rides</string>
    <string name="name">Name</string>
    <string name="name_colon">Name:</string>
    <string name="Phone_number_not_empty">Phone number can\'t be empty</string>
    <string name="valid_phone_number">Please enter valid phone number</string>
    <string name="please_wait">Please Wait ...</string>
    <string name="enter_some_fare">Please enter some fare</string>
    <string name="enter_name">Please enter name</string>
    <string name="Pls_enter_email_or_phn">Please enter email or Phone No.</string>
    <string name="Pls_enter_email">Please enter Email</string>
    <string name="enter_valid_phone_number">Please enter valid Phone No.</string>
    <string name="enter_password">Please enter password</string>
    <string name="password_atleast_6">Password must be of atleast six characters</string>
    <string name="valid_email">Please enter valid email id</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="password_to_continue">Please enter password to continue.</string>
    <string name="enter_new_phone_number">Please enter your new phone number</string>
    <string name="position">POSITION</string>
    <string name="please_login_from_these_accounts">Please login through one of these accounts</string>
    <string name="please_contact_customer_care">Please contact our customer care</string>
    <string name="paid_cash">Paid in Cash</string>
    <string name="ride_id">Ride ID</string>
    <string name="rate">Rate: </string>
    <string name="ride_in_progress_cant_logout">Ride in progress. You can logout only after the ride ends.</string>
    <string name="rate_applied">Rate Applied</string>
    <string name="register">Register</string>
    <string name="request_registration">REQUEST REGISTRATION</string>
    <string name="send">Send</string>
    <string name="local_leaderboard">LOCAL</string>
    <string name="global_leaderboard">GLOBAL</string>
    <string name="daily_leaderboard">Daily</string>
    <string name="weekly_leaderboard">Weekly</string>
    <string name="lb_rank">Rank</string>
    <string name="lb_name">Name</string>
    <string name="lb_no_downloads">No. of Downloads</string>
    <string name="dont_touch_me">DontTouchMe</string>
    <string name="code">Code</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="select_vehicle_type">Select vehicle type</string>
    <string name="continue_text">Continue</string>
    <string name="by_signing_you_agree">By Signing up you agree to our <u>Terms of Use</u> </string>
    <string name="credits">Credits</string>
    <string name="enter_credits">Credit Amount</string>
    <string name="add">Add</string>
    <string name="toll_charges">Toll Charges</string>
    <string name="tolls_incurred_during_ride">Following tolls are incurred during ride, Confirm them once</string>
    <string name="add_toll">Add Toll</string>
    <string name="toll_fare">Toll Fare</string>
</resources>