<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearLayoutRoot"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:splitMotionEvents="false"
    >

    <RelativeLayout
        android:id="@+id/relativeLayoutLocalGlobal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25px"
        android:visibility="gone"
        android:layout_marginBottom="30px"
        >

        <Button
            android:id="@+id/buttonLocal"
            android:layout_width="@dimen/share_lb_button_width"
            android:layout_height="@dimen/share_lb_button_height"
            android:layout_marginStart="30px"
            android:background="@drawable/new_orange_btn_selector_rounded"
            android:text="@string/local_leaderboard"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/buttonGlobal"
            android:layout_width="@dimen/share_lb_button_width"
            android:layout_height="@dimen/share_lb_button_height"
            android:layout_marginEnd="30px"
            android:background="@drawable/background_white_rounded_orange_bordered"
            android:text="@string/global_leaderboard"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayoutDailyWeekly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/share_lb_text_view_layout_height"
        android:layout_margin="-2px"
        >

        <TextView
            android:id="@+id/textViewDaily"
            android:layout_width="360px"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/daily_leaderboard"
            android:textColor="@color/themeColor"
            android:textSize="@dimen/share_lb_text_size"
            android:background="@drawable/background_orange_bottom_line"
            />
        <TextView
            android:id="@+id/textViewWeekly"
            android:layout_width="360px"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/weekly_leaderboard"
            android:textColor="@color/textColor"
            android:textSize="@dimen/share_lb_text_size"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutListTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30px"
        android:background="@color/grey_new"
        android:paddingBottom="30px"
        >

        <TextView
            android:id="@+id/textViewRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lb_rank"
            android:textColor="@color/grey_dark_less"
            android:textSize="@dimen/text_size_24"
            android:layout_centerVertical="true"
            android:layout_marginStart="50px"
            />
        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_name"
            android:textColor="@color/grey_dark_less"
            android:textSize="@dimen/text_size_24"
            android:layout_marginStart="160px"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/textViewNoOfDownloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lb_no_downloads"
            android:textColor="@color/grey_dark_less"
            android:textSize="@dimen/text_size_24"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="60px"
            />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</LinearLayout>