<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        >


        <TextView
            android:id="@+id/tvEnterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_name"
            android:textColor="@color/text_color_splash_heading"
            android:textSize="14sp"
            />


        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white_rounded_grey_alpha_bordered"
            android:drawableStart="@drawable/ic_edit_text_start_drawable"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="13dp"
            android:drawablePadding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterName"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/tvSelectVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_vehicle_type"
            android:textColor="@color/text_color_splash_heading"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/editTextName"
            android:layout_marginTop="20dp"
            />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvVehicleTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectVehicle"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_white_rounded_grey_alpha_bordered"
            />


        <Button
            android:id="@+id/bContinue"
            android:layout_width="146dp"
            android:layout_height="42dp"
            android:text="@string/continue_text"
            android:background="@drawable/orange_btn_selector"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/rvVehicleTypes"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            />

        <Button
            android:id="@+id/bCancel"
            android:layout_width="146dp"
            android:layout_height="42dp"
            android:text="@string/cancel"
            android:background="@drawable/menu_black_btn_selector"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/rvVehicleTypes"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/tvTermsOfUse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_you_agree"
            android:textColor="@color/text_color_splash_heading"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/bContinue"
            android:layout_marginTop="14dp"
            android:gravity="center_horizontal"
            />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>