<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/rv"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:splitMotionEvents="false"
                android:tag="@string/dont_touch_me"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:background="@drawable/dialog_background_color"
        android:splitMotionEvents="false"
        android:layout_centerInParent="true"
        >


        <LinearLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:splitMotionEvents="false"

            >

            <TextView
                android:id="@+id/textHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/confirmation_code"
                android:textColor="@color/themeColor"
                style="@style/TextTitle"/>


            <TextView
                android:id="@+id/textMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/check_your_registered_email_phone_number_for_otp"
                style="@style/TextNormal"

                />


            <EditText
                android:id="@+id/etCode"
                android:layout_width="240dp"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_background"
                android:gravity="center"
                android:hint="@string/enter_code"
                android:inputType="numberDecimal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                style="@style/TextLarge"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                />


            <Button
                android:id="@+id/btnConfirm"
                style="@style/DialogButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/done"
                android:layout_marginBottom="20dp"
                />


        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
