<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/rv"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:splitMotionEvents="false"
                android:tag="@string/dont_touch_me"
                xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:background="@drawable/dialog_background_color"
        android:orientation="vertical"
        android:splitMotionEvents="false"
        android:clickable="true"
        android:focusable="true"

        >

        <TextView
            android:id="@+id/textHead"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="12dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_toll"
            android:textColor="@color/themeColor"/>


        <TextView
            android:id="@+id/tvTollName"
            style="@style/TextMedium"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="start|center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/textColor"
            android:textCursorDrawable="@null"
            />
        <EditText
            android:id="@+id/etTollValue"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittext_background"
            android:gravity="start|center_vertical"
            android:hint="@string/toll_fare"
            android:inputType="numberDecimal"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/textColor"
            android:textCursorDrawable="@null"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            >
            <Button
                android:id="@+id/btnCancel"
                style="@style/DialogButtonAlternate"
                android:gravity="center"
                android:text="@string/cancel"
                android:layout_marginEnd="30dp"
                />
            <Button
                android:id="@+id/btnAdd"
                style="@style/DialogButton"
                android:gravity="center"
                android:text="@string/add"
                />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
